<resources>
    <string name="app_name">BakingChef</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="servings_ingredients">Ingredients for </string>

    <string name="prev_btn">Previous</string>
    <string name="next_btn">Next</string>

    <string name="fragment_ingredients_name">Ingredients</string>
    <string name="fragment_steps_name">Steps</string>

    <string name="widget_loading">Loading...</string>
</resources>
